src/gen/MIDLParser.py
# Generated from E:/work/compile/antlr-python/MIDL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MIDLParser ( Parser ):

    grammarFileName = "MIDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'module '", "'{'", "'}'", "'struct '", 
                     "'::'", "'char '", "'string '", "'boolean '", "'float '", 
                     "'double '", "'long double '", "'short '", "'int16 '", 
                     "'long '", "'int32 '", "'int64 '", "'int8 '", "'unsigned '", 
                     "'uint16 '", "'uint32 '", "'uint64 '", "'uint8 '", 
                     "','", "'='", "'['", "']'", "'|'", "'^'", "'&'", "'>>'", 
                     "'<<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "INTEGER", 
                      "FLOATING_PT", "CHAR", "STRING", "BOOLEAN", "ID" ]

    RULE_specification = 0
    RULE_definition = 1
    RULE_module = 2
    RULE_type_decl = 3
    RULE_struct_type = 4
    RULE_member_list = 5
    RULE_type_spec = 6
    RULE_scoped_name = 7
    RULE_base_type_spec = 8
    RULE_floating_pt_type = 9
    RULE_integer_type = 10
    RULE_signed_int = 11
    RULE_unsigned_int = 12
    RULE_declarators = 13
    RULE_declarator = 14
    RULE_simple_declarator = 15
    RULE_array_declarator = 16
    RULE_exp_list = 17
    RULE_or_expr = 18
    RULE_xor_expr = 19
    RULE_and_expr = 20
    RULE_shift_expr = 21
    RULE_add_expr = 22
    RULE_mult_expr = 23
    RULE_unary_expr = 24
    RULE_literal = 25

    ruleNames =  [ "specification", "definition", "module", "type_decl", 
                   "struct_type", "member_list", "type_spec", "scoped_name", 
                   "base_type_spec", "floating_pt_type", "integer_type", 
                   "signed_int", "unsigned_int", "declarators", "declarator", 
                   "simple_declarator", "array_declarator", "exp_list", 
                   "or_expr", "xor_expr", "and_expr", "shift_expr", "add_expr", 
                   "mult_expr", "unary_expr", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    WS=39
    INTEGER=40
    FLOATING_PT=41
    CHAR=42
    STRING=43
    BOOLEAN=44
    ID=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(MIDLParser.DefinitionContext,i)


        def EOF(self):
            return self.getToken(MIDLParser.EOF, 0)

        def getRuleIndex(self):
            return MIDLParser.RULE_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification" ):
                listener.enterSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification" ):
                listener.exitSpecification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecification" ):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)




    def specification(self):

        localctx = MIDLParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.definition()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==5:
                self.state = 53
                self.definition()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(MIDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_decl(self):
            return self.getTypedRuleContext(MIDLParser.Type_declContext,0)


        def module(self):
            return self.getTypedRuleContext(MIDLParser.ModuleContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = MIDLParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.type_decl()
                self.state = 62
                self.match(MIDLParser.T__0)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.module()
                self.state = 65
                self.match(MIDLParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MIDLParser.ID, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(MIDLParser.DefinitionContext,i)


        def getRuleIndex(self):
            return MIDLParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = MIDLParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(MIDLParser.T__1)
            self.state = 70
            self.match(MIDLParser.ID)
            self.state = 71
            self.match(MIDLParser.T__2)
            self.state = 72
            self.definition()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==5:
                self.state = 73
                self.definition()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(MIDLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_type(self):
            return self.getTypedRuleContext(MIDLParser.Struct_typeContext,0)


        def ID(self):
            return self.getToken(MIDLParser.ID, 0)

        def getRuleIndex(self):
            return MIDLParser.RULE_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_decl" ):
                listener.enterType_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_decl" ):
                listener.exitType_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl" ):
                return visitor.visitType_decl(self)
            else:
                return visitor.visitChildren(self)




    def type_decl(self):

        localctx = MIDLParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_decl)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.struct_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(MIDLParser.T__4)
                self.state = 83
                self.match(MIDLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MIDLParser.ID, 0)

        def member_list(self):
            return self.getTypedRuleContext(MIDLParser.Member_listContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_struct_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_type" ):
                listener.enterStruct_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_type" ):
                listener.exitStruct_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_type" ):
                return visitor.visitStruct_type(self)
            else:
                return visitor.visitChildren(self)




    def struct_type(self):

        localctx = MIDLParser.Struct_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_struct_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MIDLParser.T__4)
            self.state = 87
            self.match(MIDLParser.ID)
            self.state = 88
            self.match(MIDLParser.T__2)
            self.state = 89
            self.member_list()
            self.state = 90
            self.match(MIDLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLParser.Type_specContext)
            else:
                return self.getTypedRuleContext(MIDLParser.Type_specContext,i)


        def declarators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLParser.DeclaratorsContext)
            else:
                return self.getTypedRuleContext(MIDLParser.DeclaratorsContext,i)


        def getRuleIndex(self):
            return MIDLParser.RULE_member_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember_list" ):
                listener.enterMember_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember_list" ):
                listener.exitMember_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember_list" ):
                return visitor.visitMember_list(self)
            else:
                return visitor.visitChildren(self)




    def member_list(self):

        localctx = MIDLParser.Member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184388866016) != 0):
                self.state = 92
                self.type_spec()
                self.state = 93
                self.declarators()
                self.state = 94
                self.match(MIDLParser.T__0)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scoped_name(self):
            return self.getTypedRuleContext(MIDLParser.Scoped_nameContext,0)


        def base_type_spec(self):
            return self.getTypedRuleContext(MIDLParser.Base_type_specContext,0)


        def struct_type(self):
            return self.getTypedRuleContext(MIDLParser.Struct_typeContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_spec" ):
                listener.enterType_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_spec" ):
                listener.exitType_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = MIDLParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_spec)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.scoped_name()
                pass
            elif token in [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.base_type_spec()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.struct_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scoped_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MIDLParser.ID)
            else:
                return self.getToken(MIDLParser.ID, i)

        def getRuleIndex(self):
            return MIDLParser.RULE_scoped_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScoped_name" ):
                listener.enterScoped_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScoped_name" ):
                listener.exitScoped_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScoped_name" ):
                return visitor.visitScoped_name(self)
            else:
                return visitor.visitChildren(self)




    def scoped_name(self):

        localctx = MIDLParser.Scoped_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_scoped_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 106
                self.match(MIDLParser.T__5)


            self.state = 109
            self.match(MIDLParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 110
                self.match(MIDLParser.T__5)
                self.state = 111
                self.match(MIDLParser.ID)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def floating_pt_type(self):
            return self.getTypedRuleContext(MIDLParser.Floating_pt_typeContext,0)


        def integer_type(self):
            return self.getTypedRuleContext(MIDLParser.Integer_typeContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_base_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase_type_spec" ):
                listener.enterBase_type_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase_type_spec" ):
                listener.exitBase_type_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_type_spec" ):
                return visitor.visitBase_type_spec(self)
            else:
                return visitor.visitChildren(self)




    def base_type_spec(self):

        localctx = MIDLParser.Base_type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_base_type_spec)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.floating_pt_type()
                pass
            elif token in [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.integer_type()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(MIDLParser.T__6)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(MIDLParser.T__7)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(MIDLParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Floating_pt_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLParser.RULE_floating_pt_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloating_pt_type" ):
                listener.enterFloating_pt_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloating_pt_type" ):
                listener.exitFloating_pt_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloating_pt_type" ):
                return visitor.visitFloating_pt_type(self)
            else:
                return visitor.visitChildren(self)




    def floating_pt_type(self):

        localctx = MIDLParser.Floating_pt_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_floating_pt_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signed_int(self):
            return self.getTypedRuleContext(MIDLParser.Signed_intContext,0)


        def unsigned_int(self):
            return self.getTypedRuleContext(MIDLParser.Unsigned_intContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_integer_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_type" ):
                listener.enterInteger_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_type" ):
                listener.exitInteger_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger_type" ):
                return visitor.visitInteger_type(self)
            else:
                return visitor.visitChildren(self)




    def integer_type(self):

        localctx = MIDLParser.Integer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_integer_type)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14, 15, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.signed_int()
                pass
            elif token in [19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.unsigned_int()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Signed_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLParser.RULE_signed_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigned_int" ):
                listener.enterSigned_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigned_int" ):
                listener.exitSigned_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigned_int" ):
                return visitor.visitSigned_int(self)
            else:
                return visitor.visitChildren(self)




    def signed_int(self):

        localctx = MIDLParser.Signed_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_signed_int)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15]:
                    self.state = 132
                    self.match(MIDLParser.T__14)
                    self.state = 133
                    self.match(MIDLParser.T__14)
                    pass
                elif token in [17]:
                    self.state = 134
                    self.match(MIDLParser.T__16)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.match(MIDLParser.T__17)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unsigned_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MIDLParser.RULE_unsigned_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnsigned_int" ):
                listener.enterUnsigned_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnsigned_int" ):
                listener.exitUnsigned_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnsigned_int" ):
                return visitor.visitUnsigned_int(self)
            else:
                return visitor.visitChildren(self)




    def unsigned_int(self):

        localctx = MIDLParser.Unsigned_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_unsigned_int)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 140
                    self.match(MIDLParser.T__18)
                    self.state = 141
                    self.match(MIDLParser.T__12)
                    pass
                elif token in [20]:
                    self.state = 142
                    self.match(MIDLParser.T__19)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 145
                    self.match(MIDLParser.T__18)
                    self.state = 146
                    self.match(MIDLParser.T__14)
                    pass
                elif token in [21]:
                    self.state = 147
                    self.match(MIDLParser.T__20)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 150
                    self.match(MIDLParser.T__18)
                    self.state = 151
                    self.match(MIDLParser.T__14)
                    self.state = 152
                    self.match(MIDLParser.T__14)
                    pass
                elif token in [22]:
                    self.state = 153
                    self.match(MIDLParser.T__21)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(MIDLParser.T__22)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MIDLParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(MIDLParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return MIDLParser.RULE_declarators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarators" ):
                listener.enterDeclarators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarators" ):
                listener.exitDeclarators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarators" ):
                return visitor.visitDeclarators(self)
            else:
                return visitor.visitChildren(self)




    def declarators(self):

        localctx = MIDLParser.DeclaratorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_declarators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.declarator()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 160
                self.match(MIDLParser.T__23)
                self.state = 161
                self.declarator()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_declarator(self):
            return self.getTypedRuleContext(MIDLParser.Simple_declaratorContext,0)


        def array_declarator(self):
            return self.getTypedRuleContext(MIDLParser.Array_declaratorContext,0)


        def getRuleIndex(self):
            return MIDLParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)
